# Compiler

./: .gitignore  CMakeLists.txt  README.md  init.sh  makefile
app/: main.fr
lrn/: main.cpp  makefile
prs/: ast.h  lexicon.lex  syntax.y
prs/ast/: assignment.hpp  block.hpp  delay.hpp  log.hpp  node.hpp  primitive.hpp  variable.hpp
src/: logger.hpp  main.cpp  model.cpp  model.hpp  monitor.hpp  util.hpp
